--- a/play.html
+++ b/play.html
@@ -12,12 +12,29 @@
 
 <body class="bg-gray-100">
     <div class="min-h-screen">
-        <!-- Header -->
-        <header class="bg-blue-600 text-white py-4">
-            <div class="container mx-auto px-4">
-                <h1 class="text-2xl font-bold">Python Game Engine</h1>
+           <!-- Navigation -->
+    <nav class="bg-gray-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex items-center justify-between h-16">
+                <a href="#" class="text-white font-bold text-xl">Game Title</a>
+                <div class="hidden md:block">
+                    <div class="ml-10 flex items-baseline space-x-4">
+                        <a href="index.html" class="text-gray-300 hover:text-white px-3 py-2">Home</a>
+                        <a href="features.html" class="text-gray-300 hover:text-white px-3 py-2">Features</a>
+                        <a href="play.html" class="text-gray-300 hover:text-white px-3 py-2">Play</a>
+                    </div>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden">
+                    <button type="button" class="text-gray-400 hover:text-white">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
-        </header>
+        </div>
+    </nav>
 
         <!-- Main Content -->
         <main class="container mx-auto px-4 py-8">
