--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epic Game Title</title>
+    <title>Threads of Destiny</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -23,7 +23,7 @@
     <nav class="bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="#" class="text-white font-bold text-xl">Game Title</a>
+                <a href="#" class="text-white font-bold text-xl">Threads of Destiny</a>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="index.html" class="text-gray-300 hover:text-white px-3 py-2">Home</a>
@@ -49,7 +49,7 @@
             <img src="https://placehold.co/1920x1080" class="w-full h-full object-cover mix-blend-overlay" alt="Hero background">
         </div>
         <div class="relative z-10 text-center text-white px-4">
-            <h1 class="text-6xl font-bold mb-6">Welcome to our Choose Your Own Adventure Game</h1>
+            <h1 class="text-6xl font-bold mb-6">Welcome to Our Choose Your Own Adventure Game</h1>
             <p class="text-xl mb-8">Embark on an incredible journey in this amazing gaming experience</p>
             <a href="play.html" class="bg-blue-900 hover:bg-gray-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300">
                 Play Now
@@ -81,7 +81,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 py-6">
         <div class="text-center text-white">
-            <p>&copy; 2024 Game Title. All rights reserved.</p>
+            <p>&copy; 2024 Threads of Destiny. All rights reserved.</p>
         </div>
     </footer>
 </body>
