--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Game Engine</title>
+    <title>Threads of Destiny</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Pyodide scripts -->
     <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
@@ -16,7 +16,7 @@
     <nav class="bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="#" class="text-white font-bold text-xl">Game Title</a>
+                <a href="#" class="text-white font-bold text-xl">Threads of Destiny</a>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="index.html" class="text-gray-300 hover:text-white px-3 py-2">Home</a>
