fix the game maybe

--- a/index.html
+++ b/index.html
@@ -84,5 +84,8 @@
             <p>&copy; 2024 Threads of Destiny. All rights reserved.</p>
         </div>
     </footer>
+
+    <div id="output"></div>
+    <script type="module" src="play.js"></script>
 </body>
 </html>
