--- a/play.html
+++ b/play.html
@@ -39,14 +39,19 @@
         <!-- Main Content -->
         <main class="container mx-auto px-4 py-8">
             <div class="bg-white rounded-lg shadow-lg p-6">
-                <div id="output" class="bg-gray-900 text-green-400 p-4 rounded font-mono text-sm h-40 overflow-auto">
-
+                <div id="output" class="bg-gray-900 text-green-400 p-4 rounded font-mono text-sm h-96 overflow-auto mb-4">
+                </div>
+                <!-- Add input field -->
+                <div class="flex gap-2">
+                    <input type="text" id="userInput" class="flex-1 border rounded p-2" placeholder="Enter your choice...">
+                    <button id="submitButton" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
                 </div>
             </div>
         </main>
     </div>
 
-    <script src="dist/bundle.js"></script>
+    <!-- Change to type="module" and correct path -->
+    <script type="module" src="play.js"></script>
 </body>
 
 </html>
