Changes to the play

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="relative z-10 text-center text-white px-4">
             <h1 class="text-6xl font-bold mb-6">Welcome to Our Choose Your Own Adventure Game</h1>
             <p class="text-xl mb-8">Embark on an incredible journey in this amazing gaming experience</p>
-            <a href="play.html" class="bg-blue-900 hover:bg-gray-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300">
+            <a href="play.html" class="bg-gray-800 hover:bg-blue-800 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300">
                 Play Now
             </a>
         </div>
