--- a/play.html
+++ b/play.html
@@ -38,13 +38,24 @@
 
         <!-- Main Content -->
         <main class="container mx-auto px-4 py-8">
+            <!-- Game Code Section -->
+            <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
+                <h2 class="text-2xl font-bold mb-4">Load Saved Game</h2>
+                <div class="flex gap-2">
+                    <input type="text" id="gameCodeInput" class="flex-1 border rounded p-2" placeholder="Enter your game code...">
+                    <button id="loadGameButton" class="bg-gray-800 hover:bg-blue-800 text-white px-4 py-2 rounded">Load Game</button>
+                </div>
+                <div id="gameCodeMessage" class="mt-2 text-sm"></div>
+            </div>
+
+            <!-- Game Interface -->
             <div class="bg-white rounded-lg shadow-lg p-6">
                 <div id="output" class="bg-gray-900 text-green-400 p-4 rounded font-mono text-sm h-96 overflow-auto mb-4">
                 </div>
                 <!-- Add input field -->
                 <div class="flex gap-2">
                     <input type="text" id="userInput" class="flex-1 border rounded p-2" placeholder="Enter your choice...">
-                    <button id="submitButton" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
+                    <button id="submitButton" class="bg-gray-800 hover:bg-blue-800 text-white px-4 py-2 rounded">Submit</button>
                 </div>
             </div>
         </main>
