--- a/play.html
+++ b/play.html
@@ -45,17 +45,27 @@
                     <input type="text" id="gameCodeInput" class="flex-1 border rounded p-2" placeholder="Enter your game code...">
                     <button id="loadGameButton" class="bg-gray-800 hover:bg-blue-800 text-white px-4 py-2 rounded">Load Game</button>
                 </div>
-                <div id="gameCodeMessage" class="mt-2 text-sm"></div>
+                <div class="mt-4">
+                    <p class="text-sm text-gray-600 mb-2">Your Game Code:</p>
+                    <p id="gameCodeText" class="font-mono bg-gray-100 p-2 rounded"></p>
+                </div>
             </div>
 
             <!-- Game Interface -->
-            <div class="bg-white rounded-lg shadow-lg p-6">
+            <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
                 <div id="output" class="bg-gray-900 text-green-400 p-4 rounded font-mono text-sm h-96 overflow-auto mb-4">
                 </div>
-                <!-- Add input field -->
                 <div class="flex gap-2">
                     <input type="text" id="userInput" class="flex-1 border rounded p-2" placeholder="Enter your choice...">
                     <button id="submitButton" class="bg-gray-800 hover:bg-blue-800 text-white px-4 py-2 rounded">Submit</button>
+                </div>
+            </div>
+
+            <!-- Game Report Section -->
+            <div id="gameReport" class="bg-white rounded-lg shadow-lg p-6 hidden">
+                <h2 class="text-2xl font-bold mb-4" id="reportTitle">Game Report</h2>
+                <div class="prose max-w-none">
+                    <pre id="reportContent" class="whitespace-pre-wrap bg-gray-100 p-4 rounded-lg font-mono text-sm leading-relaxed"></pre>
                 </div>
             </div>
         </main>
